Pone el correo de contacto y ordena un poco los valores de la tabla de arriba

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,6 +39,7 @@
     <noscript>
         <h1>You must enable javascript to view this page.</h1>
     </noscript>
+    <div id="fb-root"></div>
     <!-- uncomment this for adding service worker
         <script>
             if ('serviceWorker' in navigator) {
